# LLM-metadata-harvester-service

./: .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  nerdctl-compose.dev.yml  nerdctl-compose.local.yml  nerdctl-compose.prod.yml  nerdctl-compose.public.yml  nerdctl-compose.yml  pyproject.toml
container/: entrypoint.py  llm-metadata-harvester-service.def
docker/: Dockerfile.api.local  Dockerfile.dev  Dockerfile.worker.prod
nginx/: nginx.conf  nginx.dev.conf  nginx.prod.conf  nginx.public.conf
scripts/: start-dev.sh  stop-dev.sh
src/llm-metadata-harvester-service/: main.py
src/llm-metadata-harvester-service/api/: jobs.py  schemas.py
src/llm-metadata-harvester-service/core/: celery_app.py
src/llm-metadata-harvester-service/services/: apptainer.py
src/llm-metadata-harvester-service/workers/: tasks.py
src/llm_metadata_harvester_service/: gunicorn_conf.py  main.py
src/llm_metadata_harvester_service/api/: jobs.py  schemas.py
src/llm_metadata_harvester_service/api/routes/: jobs.py
src/llm_metadata_harvester_service/core/: celery_app.py
src/llm_metadata_harvester_service/services/: apptainer.py
src/llm_metadata_harvester_service/workers/: tasks.py  watchfiles_celery.py
tools/: webhook_receiver.py
