[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-metadata-harvester-service"
version = "0.1.0"
description = "Async FastAPI service executing Apptainer-based containerized LTERLife LLM-metadata-harvester tool via Celery"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache 2.0" }

authors = [
  { name = "Meiert Grootes", email = "m.grootes@esciencecenter.nl" }
]

dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "gunicorn>=21.2",
  "celery>=5.3",
  "redis>=5.0",
  "pydantic>=2.6",
  "python-dotenv>=1.0",
  "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
  "black>=24.1",
  "ruff>=0.3",
  "mypy>=1.8",
  "pytest>=8.0",
  "httpx>=0.26",
]

postgres = [
  "sqlalchemy>=2.0",
  "psycopg2-binary>=2.9",
]

[project.urls]
#Homepage = "https://example.com"
Repository = "https://github.com/NLeSC-LTER-LIFE/LLM-metadata-harvester-service"


[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]


[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
